fixing table align

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,5 @@
+
+
 .hero {
     height: 50%;
     color: #fff;
@@ -45,8 +47,8 @@
 }
 
 .content {
-    /*padding-top: 100px;*/
     margin: -1em auto;
+    border: none;
 }
 
 #headshot {
@@ -140,10 +142,6 @@ h2 {
     margin-top: 2em;
 }
 
-.primary {
-    margin: 0 auto;
-}
-
 #photo {
     margin-top: -4em;
 }
@@ -176,9 +174,14 @@ h2 {
     padding-bottom: 3em;
 }
 
+table {
+    margin: 0 auto;
+}
+
 td {
-    text-align: center; 
+    text-align: center;
     vertical-align: middle;
+    padding: 0 2em;
 }
 
 #back {
